<resources>
    <string name="app_name">StrongBox</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="del">del</string>
    <string name="ok">ok</string>
    <string name="goBack">Go Back</string>
    <string name="congratulations">Congratulations!</string>
    <string name="porn">But unfortunately there is no porn here. Go back to work.</string>
</resources>
