<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.theross.strongbox.MainActivity">

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/one"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button2"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/two"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button3"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/three"
                android:textSize="30dp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button4"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/four"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button5"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/five"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button6"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/six"
                android:textSize="30dp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button7"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/seven"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button8"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/eight"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button9"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/nine"
                android:textSize="30dp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonDel"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/del"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/button0"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/zero"
                android:textSize="30dp" />

            <Button
                android:id="@+id/buttonOk"
                android:width="80dp"
                android:height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/ok"
                android:textSize="30dp" />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>
